[package]
name = "vpxtool_gui"
edition = "2024"

[[bin]]
name = "vpxtool-gui"
path = "src/main.rs"


[dependencies]
vpxtool = "0.24.0"
bevy = "0.16.1"
bevy_asset = "0.16.1"
bevy_dev_tools = "0.16.1"
#bevy_asset_loader = "0.22.0"
bevy_egui = "0.34.1"
#eframe = "0.30.0"
#egui_extras = { version = "0.30.0", features = ["image"] }
crossbeam-channel = "0.5.15"
is_executable = "1.0.4"
sysinfo = "0.35.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
